--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   :  #4d9006;
+$secondary : #91e2da;
+$accent    :#c898ef;
+
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
